--- a/.github/workflows/update-cask.yml
+++ b/.github/workflows/update-cask.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   update-cask:
     runs-on: macos-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
